# HidemaruMacroInsDate

./: .gitignore  CLAUDE.md  Cargo.toml  Help.txt  LICENSE  README.md  build.ps1  history.txt
.cargo/: config.toml
mac/: InsertDate.mac  InsertDateEn.mac  InsertDateList.mac  InsertDateListEn.mac  InsertDateListSample01.mac  InsertDateListSample02.mac  InsertDateListSample03.mac  InsertDateListSample04.mac
reference/: README.txt
reference/insdate/: File1.cpp  ProjectGroup1.groupproj  ProjectGroup1.groupproj.local  insdate.cache  insdate.cbproj  insdate.cbproj.local  insdate.def  insdate.drc  insdate.ilc  insdate.ild  insdate.lib  insdate.map  insdate.res  insdate.tds  test_update.bat  update.bat
reference/insdate/Archive/: InsertDate.mac  InsertDateList01.mac  InsertDateList02.mac  InsertDateList03.mac  readme.txt
reference/insdate/Archive/100/: InsertDate.mac  (+4 more)
reference/insdate/gazo/: icon_hide_highlight.psd
reference/insdate/installer/: GetAppInfoString.cpp  GetAppInfoString.h  InsertDateList01.mac  Unit1.cpp  Unit1.dfm  Unit1.h  install.cbproj  install.cbproj.local  install.cpp  install.drc  install.ilc  install.ild  install.manifest  install.map  install.res
reference/insdate/menuBuilder/: InsertDateList02.mac  MenuBuilder.cbproj  MenuBuilder.cbproj.local  MenuBuilder.res  SkRegExpConst.hpp  SkRegExpConst.pas  SkRegExpW.hpp  SkRegExpW.pas  UnicodeProp.hpp  Unit1.cpp  Unit1.dfm  Unit1.h
src/: lib.rs
tools/GetHash/: GetHash.slnx  Program.cs
tools/GetVersion/: Args.cs  GetVersion.slnx  Program.cs
tools/GetVersion/Properties/: launchSettings.json
(+24 files in other folders)
